# heureum-agent

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  GITHUB_SECRETS.md  LICENSE  Makefile  OPEN_RESPONSES.md  README.md  package.json
heureum-agent/: .env.example  Dockerfile  README.md  pyproject.toml
heureum-agent/app/: config.py  main.py  models.py
heureum-agent/app/routers/: __init__.py  agent.py
heureum-agent/app/schemas/: __init__.py  open_responses.py  tool_schema.py
heureum-agent/app/services/: __init__.py  agent_service.py  notification_service.py  periodic_task_service.py  todo_service.py  tool_chain.py
heureum-agent/app/services/compaction/: __init__.py  pruning.py  repair.py  settings.py  summarizer.py  tokens.py  truncation.py
heureum-agent/app/services/prompts/: __init__.py  base.py
heureum-agent/app/services/providers/: __init__.py  mcp.py
heureum-agent/scripts/: test_gemini_langchain_roundtrip.py  test_thought_signature.py  test_thought_signature2.py  test_thought_signature3.py
heureum-agent/tests/: conftest.py  test_agent_service.py  test_compaction.py  test_main.py  test_mcp_client.py  test_open_responses.py  test_prompts.py  test_router_endpoint.py  test_router_helpers.py  test_tool_chain.py
heureum-agent/tests/integration/: 01_health_check.json  02_simple_text_response.json  03_tool_call_response.json  04_tool_result_continuation.json  05_mcp_initialize.json  06_mcp_tools_list.json  07_agentic_loop_web_search.json  08_agentic_loop_full_history.json  test_e2e.sh
heureum-client/: README.md  (+5 more)
heureum-mcp/: .env.example  Dockerfile  README.md  pyproject.toml
heureum-mcp/src/: __init__.py  config.py  main.py
heureum-mcp/src/common/: __init__.py  cache.py  content_safety.py
heureum-mcp/src/common/security/: __init__.py  ssrf.py
heureum-mcp/src/servers/: __init__.py  web.py
heureum-mcp/src/tools/: __init__.py
heureum-mcp/src/tools/web/: __init__.py  fetch.py  fetch_utils.py  search.py
heureum-mcp/tests/: conftest.py  test_cache.py  test_content_safety.py  test_fetch_utils.py  test_firecrawl.py  test_ssrf.py  test_web_tools_integration.py
heureum-platform/: .env.example  Dockerfile  README.md  db.sqlite3.bak  manage.py  pyproject.toml  test_open_responses.py
heureum-platform/accounts/: adapter.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
heureum-platform/accounts/migrations/: 0001_initial.py  0002_logincode_client.py
heureum-platform/chat_messages/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
heureum-platform/chat_messages/management/commands/: fetch_model_pricing.py
heureum-platform/chat_messages/migrations/: 0001_initial.py  0002_alter_message_role.py  0003_toolpermission.py  0004_question.py  0004_session.py  0005_merge_0004_question_0004_session.py  0006_session_title_session_user.py  0007_add_pricing_and_usage_fields.py  0008_suggestedquestion.py
heureum-platform/heureum_platform/: __init__.py  asgi.py  authentication.py  celery.py  email_backend.py  settings.py  urls.py  wsgi.py
heureum-platform/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
heureum-platform/notifications/migrations/: 0001_initial.py  0002_notificationpreference.py
heureum-platform/periodic_tasks/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_api.py  urls.py  utils.py  views.py
heureum-platform/periodic_tasks/migrations/: 0001_initial.py  0002_add_notify_on_success.py
heureum-platform/proxy/: __init__.py  apps.py  test_proxy.py  views.py
heureum-platform/session_files/: admin.py  apps.py  models.py  serializers.py  storage.py  test_api.py  urls.py  views.py
heureum-platform/session_files/migrations/: 0001_initial.py
heureum-platform/templates/accounts/: magic_link_redirect.html
(+106 files in other folders)
