[tool.poetry]
name = "heureum-agent"
version = "0.1.0"
description = "AI agent service with FastAPI and LangChain"
authors = ["Heureum AI"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
langchain = "^1.2.0"
langchain-openai = "^1.1.0"
langchain-google-genai = "^4.2.0"
langchain-community = "^0.4.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.0"
httpx = "^0.28.0"
mcp = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
ruff = "^0.9.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
